manifests/base/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: onderwijsdata-chat-public-allowlist
  labels:
    instance: traefik-external
spec:
  ipAllowList:
    sourceRange:
    - 0.0.0.0/0
